Fix the graph spacing issue

--- a/public/sass/_graph.sass
+++ b/public/sass/_graph.sass
@@ -18,7 +18,6 @@
 
         %node-label
             cursor: pointer
-            text-anchor: middle
             +transition(all 500ms ease)
 
         .level-0
